<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="introText">Droid Desserts!</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="iceCreamSandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donutOrderMessage">You ordered a donut. </string>
    <string name="iceCreamOrderMessage">You ordered an ice cream sandwich.</string>
    <string name="froyoOrderMessage">You ordered a FroYo.</string>
    <string name="nameLabel">Name</string>
    <string name="nameHint">Enter Your Name</string>
    <string name="enterAddressHint">Enter Your Address</string>
    <string name="enter_phone_number_hint">Enter Phone Number</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter Note</string>
    <string name="choose_delivery_method">Choose a delivery method</string>
    <string name="same_day_messenger_delivery">Same day messenger delivery</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="phone">Phone</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
